# device-tester_o

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.adoc  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml  codeql-analysis.yml
app/: CMakeLists.txt  WindowsHiDPI.manifest  WindowsHiDPI.rc
app/src/: main.cpp
app/src/config/: config_manager.cpp  config_manager.hpp  recent.cpp  recent.hpp
app/src/connection/: config_io.cpp  config_io.hpp  connection.cpp  connection.hpp  connection_handle.cpp  connection_handle.hpp  connection_options.hpp  serial_connection.cpp  serial_connection.hpp  tcp_connection.cpp  tcp_connection.hpp  tcp_server.cpp  tcp_server.hpp  tcp_server_client.cpp  tcp_server_client.hpp  tcp_server_connection_handle.cpp  tcp_server_connection_handle.hpp  tcp_server_manager.cpp  tcp_server_manager.hpp  udp_connection.cpp  udp_connection.hpp
app/src/devices/: base_device.cpp  base_device.hpp  device_connection.cpp  device_connection.hpp  ublox_device.cpp  ublox_device.hpp
app/src/gnss/: gnss_device.cpp  gnss_device.hpp  ublox_device.cpp  ublox_device.hpp
app/src/gui/: app.cpp  app.hpp  device_manager.cpp  device_manager.hpp  imgui_commons.cpp  imgui_commons.hpp  params.hpp
app/src/gui/data-flow/: led.cpp  led.hpp
app/src/gui/data_flow/: connection.cpp  connection.hpp  data_flow_graph.cpp  data_flow_graph.hpp  data_flow_types.hpp  node.cpp  node.hpp  slot.cpp  slot.hpp  ui_node.cpp  ui_node.hpp
app/src/gui/modals/: base_modal.cpp  base_modal.hpp  device_create.cpp  device_create.hpp
app/src/gui/widgets/: connection_settings.cpp  connection_settings.hpp  inputs.cpp  inputs.hpp  plot_throughput.cpp  plot_throughput.hpp  raw_mem_viewer.cpp  raw_mem_viewer.hpp  raw_text_output.cpp  raw_text_output.hpp
app/src/gui/windows/: base_window.cpp  base_window.hpp  connection_win.cpp  connection_win.hpp  data_flow_editor.cpp  data_flow_editor.hpp  serial_connection_win.cpp  serial_connection_win.hpp  tcp_connection_win.cpp  tcp_connection_win.hpp  udp_connection_win.cpp  udp_connection_win.hpp
app/src/protocols/: dynamic_protocol_dispatcher.cpp  dynamic_protocol_dispatcher.hpp  protocol.cpp  protocol.hpp  protocol_dispatcher.hpp  protocol_loader.cpp  protocol_loader.hpp  protocol_nmea.cpp  protocol_nmea.hpp  protocol_types.hpp  protocol_ublox.cpp  protocol_ublox.hpp  ublox_detail.cpp  ublox_detail.hpp  ublox_protocol.cpp  ublox_protocol.hpp
app/test/protocols/: protocol_dispatcher.cpp
data-flow/: CMakeLists.txt
data-flow/include/data-flow/: data_flow_editor.hpp  data_flow_graph.hpp  gui.hpp  id_generator.hpp  types.hpp
data-flow/include/data-flow/nodes/: base_node.hpp  node_types.hpp  slot_node.hpp  timer_node.hpp
data-flow/include/data-flow/nodes/core/: base_node.hpp  node_types.hpp
data-flow/include/data-flow/nodes/interaction/: color_node.hpp
data-flow/include/data-flow/nodes/operators/: division.hpp  simple_cmp.hpp  simple_op.hpp  simple_op_builder.hpp  standard_ops.hpp
data-flow/include/data-flow/nodes/utils/: timer_node.hpp
data-flow/include/data-flow/slots/: base_slot.hpp  bool_slot.hpp  floating_slot.hpp  int_slot.hpp  slot_types.hpp  trigger_slot.hpp
data-flow/include/data-flow/slots/core/: base_slot.hpp  number_slot.hpp  slot_types.hpp
data-flow/src/: bounded_buffer.hpp  data_flow_editor.cpp  data_flow_graph.cpp  graph_impl.cpp  graph_impl.hpp  gui.cpp  id_generator.cpp  node_display_tree.cpp  node_display_tree.hpp  priv_types.cpp  priv_types.hpp  types.cpp
data-flow/src/nodes/: base_node.cpp  slot_node.cpp  timer_node.cpp
data-flow/src/nodes/core/: base_node.cpp  json.cpp  json.hpp
data-flow/src/nodes/interaction/: color_node.cpp
data-flow/src/nodes/operators/: division.cpp  simple_cmp.cpp  simple_op.cpp  simple_op_builder_impl.hpp  standard_ops.cpp
data-flow/src/nodes/utils/: timer_node.cpp
data-flow/src/slots/: base_slot.cpp  bool_slot.cpp  floating_slot.cpp  int_slot.cpp  trigger_slot.cpp
data-flow/src/slots/core/: base_slot.cpp  number_slot.cpp
docs/: CMakeLists.txt  architecture.adoc  main.adoc
docs/diagrams/: architecture.puml  architecture_component.puml  project_structure.puml
imnodes/: CMakeLists.txt
nmea/: CMakeLists.txt
nmea/include/: nmea_handler.hpp  nmea_messages.hpp  nmea_parser.hpp  nmea_parser_helper.hpp
nmea/include/grammars/: base_grammar.hpp  sentence_dtm.hpp
nmea/include/nmea/: nmea_messages.hpp  nmea_parser.hpp  nmea_parser_helper.hpp
nmea/include/nmea/grammars/: base_grammar.hpp  sentence_dtm.hpp  sentence_gll.hpp  sentence_unsupported.hpp
nmea/src/: grammar.hpp  grammer.hpp  nmea_parser.cpp  parser.cpp
nmea/src/grammars/: base_grammar.hpp  sentence_dtm.hpp  sentence_gll.hpp
plugins/: CMakeLists.txt
plugins/device/: CMakeLists.txt
plugins/protocol/: CMakeLists.txt
plugins/protocol/base/: CMakeLists.txt
plugins/protocol/base/include/: protocol_plugin.hpp
plugins/protocol/base/include/dt-protocol/: protocol.hpp  protocol_plugin.hpp  protocol_types.hpp
plugins/protocol/nmea/: CMakeLists.txt
plugins/protocol/nmea/src/: handler.cpp  handler.hpp  protocol_nmea.cpp  protocol_nmea.hpp  protocol_plugin.cpp
plugins/protocol/ublox/: CMakeLists.txt
plugins/protocol/ublox/src/: protocol_plugin.cpp  protocol_ublox.cpp  protocol_ublox.hpp  ublox_detail.cpp  ublox_detail.hpp
